--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -8,49 +8,42 @@
         font-family: 'Raleway', sans-serif;
     }
 
-    &-xl,
-    &-lg,
-    &-md {
-        font-weight: 100;
-        letter-spacing: top-em(10);
-    }
-
     &-xxl {
-        font-size: to-rem(13);
+        font-weight: 700;
+        font-size: to-rem(34);
         letter-spacing: to-rem(5);
 
         @include layout-768() {
-            font-size: to-rem(21);
+            font-size: to-rem(55);
             letter-spacing: to-rem(13);
         }
 
         @include layout-1024() {
-            font-weight: 100;
-            font-size: to-rem(21);
+            font-size: to-rem(55);
             letter-spacing: to-rem(13);
         }
 
         @include layout-1680() {
-            font-size: to-rem(55);
+            font-size: to-rem(89);
             letter-spacing: to-rem(21);
         }
 
         @include layout-2560() {
-            font-size: to-rem(55);
+            font-size: to-rem(144);
+            letter-spacing: to-rem(55);
         }
 
         @include layout-3840() {
-            font-size: to-rem(89);
+            font-size: to-rem(233);
         }
     }
 
     &-xl {
-        font-weight: 400;
+        font-weight: 700;
         font-size: to-rem(21);
         letter-spacing: to-rem(8);
 
         @include layout-768() {
-            font-weight: 300;
             font-size: to-rem(55);
             letter-spacing: to-rem(13);
         }
@@ -67,13 +60,14 @@
     }
 
     &-lg {
+        font-weight: 700;
         font-size: to-rem(21);
 
         @include layout-768() {
             font-size: to-rem(34);
         }
 
-        @include layout-1024() {
+        @include layout-1440() {
             font-size: to-rem(55);
         }
 
@@ -85,9 +79,10 @@
     &-md {
         font-weight: 400;
         font-size: to-rem(21);
+        letter-spacing: to-rem(13);
 
         @include layout-768() {
-            font-weight: 300;
+            font-weight: 200;
             font-size: to-rem(34);
         }
     }
@@ -148,7 +143,7 @@
         font-size: to-rem(13);
         line-height: to-rem(21);
 
-        @include layout-768() {
+        @include layout-1680() {
             font-size: to-rem(21);
             line-height: to-rem(34);
         }
