--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -80,7 +80,7 @@
 
         &.ptf {
             border: to-rem($F1) solid $color-turquoise;
-            animation: bounce-2 20s linear infinite;
+            animation: bounce-2 10s linear infinite;
             bottom: to-vw($F1 * 1px, $vw-320);
             right: to-vw($F12 * 1px, $vw-320);
             width: to-vw($F12 * 1px, $vw-320);
@@ -129,7 +129,7 @@
             top: to-vw($F9 * -1px, $vw-320);
             width: to-vw($F13 * 1px, $vw-320);
             height: to-vw($F13 * 1px, $vw-320);
-            animation: bounce-1 40s linear infinite;
+            animation: bounce-1 20s linear infinite;
             color: $color-orange;
 
             @include layout-768() {
@@ -172,7 +172,7 @@
             right: to-vw($F5 * -1px, $vw-320);
             width: to-vw($F12 * 1px, $vw-320);
             height: to-vw($F12 * 1px, $vw-320);
-            animation: bounce-3 30s linear infinite;
+            animation: bounce-3 10s linear infinite;
             color: $color-pink;
 
             @include layout-768() {
@@ -288,11 +288,11 @@
         max-width: 100vw;
 
         @include layout-1024() {
-            grid-gap: to-rem($F9);
+            grid-gap: to-rem($F11);
         }
 
         @include layout-1440() {
-            grid-gap: to-rem($F10);
+            grid-gap: to-rem($F12);
         }
 
         @include layout-2560() {
@@ -379,12 +379,14 @@
                     }
 
                     &-toggle-1 {
-                        @extend .ttl-md;
+                        @extend .ttl-sm;
 
                         top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
+                        left: 0;
+                        width: 100%;
+                        transform: translate(0, -50%);
                         opacity: 0;
+                        text-align: center;
 
                         .portfolio-item-link:hover & {
                             opacity: 1;
@@ -464,6 +466,7 @@
 
                 margin: to-rem($F7) 0;
                 text-decoration: underline;
+                color: var(--black);
             }
 
             padding-top: to-rem($F9);
@@ -580,6 +583,7 @@
         margin: 0;
         padding: 0;
         grid-gap: to-rem($F8);
+        border-bottom: 2px solid $color-blue;
 
         @include layout-768() {
             grid-gap: to-rem($F8);
@@ -597,6 +601,7 @@
         @include layout-2560() {
             grid-gap: to-rem($F12);
         }
+
     }
 
     &-item {
@@ -621,6 +626,144 @@
             }
         }
     }
+
+    &-draw {
+        background: $color-blue;
+
+        aspect-ratio: 9/16;
+        position: relative;
+        box-sizing: border-box;
+        width: to-rem(180);
+        border-radius: to-rem($F6);
+        margin-bottom: to-rem($F9);
+        margin-left: to-rem($F8);
+        transform: rotateZ(352deg); 
+
+        @include layout-375() {
+            float: left;
+            width: to-rem(160);
+            border-radius: to-rem($F6);
+            margin-right: to-rem($F9);
+            margin-bottom: to-rem($F8);
+            margin-left: 0;
+            transform: rotateZ(354deg);
+        }
+
+        @include layout-540() {
+            width: to-rem(180);
+            transform: rotateZ(352deg); 
+        }
+
+        @include layout-768() {
+            width: to-rem(240);
+            border-radius: to-rem($F6);
+            margin-right: to-rem($F10);
+            margin-bottom: 0;
+            transform: rotateZ(350deg); 
+        }
+
+        @include layout-1024() {
+            width: to-rem(180);
+            border-radius: to-rem($F6);
+            margin-right: to-rem($F11);
+        }
+
+        @include layout-1280() {
+            width: to-rem(180);
+            margin-right: to-rem($F9);
+            margin-bottom: to-rem($F8);
+            transform: initial;
+        }
+
+        @include layout-1440() {
+            width: to-rem(240);
+            border-radius: to-rem($F7);
+            margin-right: to-rem($F10);
+            margin-bottom: to-rem($F9);
+        }
+
+        @include layout-1920() {
+            width: to-rem(320);
+            border-radius: to-rem($F7);
+            margin-right: to-rem($F11);
+            margin-bottom: to-rem($F9);
+        }
+
+        @include layout-2560() {
+            width: to-rem(520);
+            border-radius: to-rem($F8);
+            margin-right: to-rem($F12);
+            margin-bottom: to-rem($F10);
+        }
+
+        @include layout-3840() {
+            width: to-rem(640);
+        }
+
+        &-mic {
+            width: 1.5%;
+            aspect-ratio: 1/1;
+            box-sizing: border-box;
+            margin: 0 auto 0;
+            position: absolute;
+            left: 50%;
+            top: 1.5%;
+            transform: translate(-50%, -50%);
+            border-radius: 100%;
+            background: var(--white);
+        }
+
+        &-speaker {
+            width: 10%;
+            aspect-ratio: 10/1;
+            box-sizing: border-box;
+            margin: 0 auto;
+            position: absolute;
+            left: 60%;
+            top: 1.5%;
+            transform: translate(-50%, -50%);
+            background:var(--white);
+        }
+
+        &-screen {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            border: 1px solid $color-blue;
+            width: 95%;
+            height: 95%;
+            box-sizing: border-box;
+            margin: 5% auto 0;
+            background: var(--white);
+            position: relative;
+            box-sizing: border-box;
+            padding: to-rem($F8);
+
+            @include layout-768() {
+                padding: to-rem($F9);
+            }
+
+            @include layout-1024() {
+                padding: to-rem($F8);
+            }
+
+            @include layout-1280() {
+                padding: to-rem($F8);
+            }
+
+            @include layout-1440() {
+                padding: to-rem($F9);
+            }
+
+            @include layout-1920() {
+                padding: to-rem($F10);
+            }
+
+            @include layout-2560() {
+                padding: to-rem($F10);
+            }
+        }
+    }
 }
 
 .portfolio,
@@ -631,6 +774,18 @@
 
     @include layout-768() {
         padding-top: to-rem($F14);
+    }
+
+    @include layout-1024() {
+        padding-top: to-rem($F13);
+    }
+
+    @include layout-1280() {
+        padding-top: to-rem($F12);
+    }
+
+    @include layout-1680() {
+        padding-top: to-rem($F13);
     }
 
     @include layout-2560() {
@@ -668,11 +823,15 @@
     padding-top: to-rem($F11);
 
     @include layout-768() {
+        padding-top: to-rem($F12);
+    }
+
+    @include layout-1280() {
         padding-top: to-rem($F13);
     }
 
     @include layout-1440() {
-        padding-top: to-rem($F14);
+        padding-top: to-rem($F13);
     }
 
     @include layout-2560() {
@@ -795,16 +954,6 @@
 }
 @keyframes bounce-3 {
     50% {
-        transform: translate(0, -10px)
-    }
-}
-@keyframes bounce-4 {
-    50% {
-        transform: translate(-20px, -10px);
-    }
-}
-@keyframes bounce-5 {
-    50% {
-        transform: translate(20px, 10px);
+        transform: translate(10px, -30px)
     }
 }
