HOME: update cover styles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,9 +3,8 @@ $color-black:               #262626;
 $color-grey:                #A79E9E;
 $color-grey-2:              #e7e7e7;
 
-$color-blue:              #78b4ff;
-$color-slate:             #888;
-$color-turquoise:         #40e0d0;
+$color-blue:              #9db9d8;
+$color-turquoise:         #5bd6ca;
 $color-orange:            #ffa500;
 $color-pink:              #ffc0cb;
 
