REVIEW: fixed grammar errors, updated styles

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -22,10 +22,11 @@
     color: var(--grey);
     text-decoration: none;
     cursor: pointer;
+    transition: opacity .3s ease-in;
 
     &:hover,
     &:focus {
-      text-decoration: line-through;
+      opacity: .5;
     }
 
     &.router-link-exact-active,
