--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -286,6 +286,7 @@
             &-text {
                 @extend .ttl-sm;
 
+                transition: opacity .3s ease-in;
                 padding: 0 to-rem($F8);
                 margin: 0;
                 height: 100%;
@@ -295,7 +296,7 @@
 
                 .awards-item-link:hover &,
                 .awards-item-link:focus & {
-                    text-decoration: line-through;
+                    opacity: .5;
                 }
             }
         }
@@ -899,12 +900,13 @@
         color: inherit;
 
         &-link {
+            transition: opacity .3s ease-in;
             color: inherit;
             text-decoration: none;
 
             &:hover,
             &:focus {
-                text-decoration: line-through;
+                opacity: .5;
             }
         }
 
