--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -35,6 +35,7 @@
         height: to-rem($F9);
         line-height: to-rem($F9);
         margin-bottom: to-rem($F7);
+        transition: opacity .3s ease-in;
 
         @include layout-1024() {
             text-transform: initial;
@@ -61,7 +62,7 @@
 
         &:hover,
         &:focus {
-            text-decoration: line-through;
+            opacity: .5
         }
     }
 
