--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,6 +14,7 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
+  cursor: pointer;
 
   &-link {
     @extend .ttl-xs;
@@ -40,6 +41,14 @@
         background: var(--grey);
       }
     }
+  }
+
+  &-separator {
+    @extend .ttl-xs;
+
+    font-weight: 700;
+    color: var(--grey);
+    padding: 0 to-rem(10);
   }
 }
 
