UPDATE V2: reorder, order by  ongoing projects, then freelancing jobs, then older projects + homepage relayout

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,11 +1,10 @@
 $color-white:               #FFF;
 $color-black:               #262626;
 $color-grey:                #A79E9E;
-$color-grey-2:              #e7e7e7;
+$color-grey-2:              #f0f0f0;
 
-$color-blue:              #0077ab;
-$color-turquoise:         #32b3a6;
-$color-red:              #f97474;
+$color-blue:                #0077ab;
+
 
 // Viewports
 // @type pixels
