--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -75,3 +75,16 @@
 .fade-leave-to {
   opacity: 0;
 }
+
+.hover {
+  will-change: transform, opacity;
+  pointer-events: none;
+  z-index: 100;
+  background: none;
+  top: to-rem($F9);
+  left: to-rem($F6);
+  position: absolute;
+  opacity: 0;
+  width: to-rem($F11);
+  height: to-rem($F11);
+}
